--- a/styles.css
+++ b/styles.css
@@ -152,6 +152,29 @@
 }
 
 
+.go-to-instructions {
+  position: absolute;
+  top: 0;
+  left: 0;
+  color: #68BBE3; 
+  padding: 15px 25px; 
+  background-color: #000000; 
+  background-image: 
+  radial-gradient(93% 87% at 87% 89%, rgba(0, 0, 0, 0.23) 0%, transparent 86.18%), 
+  radial-gradient(66% 66% at 26% 20%, rgba(255, 255, 255, 0.55) 0%, rgba(255, 255, 255, 0) 69.79%, rgba(255, 255, 255, 0) 100%); 
+  box-shadow: inset -3px -3px 9px rgba(255, 255, 255, 0.25), inset 0px 3px 9px rgba(255, 255, 255, 0.3), inset 0px 1px 1px rgba(255, 255, 255, 0.6), inset 0px -8px 36px rgba(0, 0, 0, 0.3), inset 0px 1px 5px rgba(255, 255, 255, 0.6), 2px 19px 31px rgba(0, 0, 0, 0.2); 
+  border-radius: 10px; 
+  font-weight: bold; 
+  font-size: 20px; 
+  font-family: "Courgette", cursive;
+  border: 0; 
+  user-select: none; 
+  -webkit-user-select: none; 
+  touch-action: manipulation; 
+  cursor: pointer;
+ }
+
+
 .codedBy {
     text-align: center;
     display: block;
@@ -219,4 +242,67 @@ ul {
     margin: 0;
     padding-left: 0;
 }
+
+.instructionPage {
+  background-color: #000000;
+  margin: 0;
+  padding: 0;
+}
+
+.instructionContainer {
+  display: flex;
+  justify-content: flex-end;
+
+}
+
+.instructionHeadline {
+  display: flex;
+  color: #FF33AA;
+  font-family: "Courgette", cursive;
+  font-size: 100px;
+}
+
+.allInstructions {
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+}
+
+.instructions {
+  color: #FFFFC2;
+  font-family: "Courgette", cursive;
+  font-size: 25px;
+  width: 58vw;
+}
+
+.brianGriffin {
+display: flex;
+justify-content: center;
+margin-top: 10vh;
+
+}
+
+.back-to-menu-button {
+  color: #FF33AA; 
+  align-items: center;
+  padding: 15px 25px; 
+  margin-top: 15vh;
+  background-color: #000000; 
+  background-image: 
+  radial-gradient(93% 87% at 87% 89%, rgba(0, 0, 0, 0.23) 0%, transparent 86.18%), 
+  radial-gradient(66% 66% at 26% 20%, rgba(255, 255, 255, 0.55) 0%, rgba(255, 255, 255, 0) 69.79%, rgba(255, 255, 255, 0) 100%); 
+  box-shadow: inset -3px -3px 9px rgba(255, 255, 255, 0.25), inset 0px 3px 9px rgba(255, 255, 255, 0.3), inset 0px 1px 1px rgba(255, 255, 255, 0.6), inset 0px -8px 36px rgba(0, 0, 0, 0.3), inset 0px 1px 5px rgba(255, 255, 255, 0.6), 2px 19px 31px rgba(0, 0, 0, 0.2); 
+  border-radius: 10px; 
+  font-weight: bold; 
+  font-size: 20px; 
+  font-family: "Courgette", cursive;
+  border: 0; 
+  user-select: none; 
+  -webkit-user-select: none; 
+  touch-action: manipulation; 
+  cursor: pointer;
+}
+
+
 
